# darc_procedure

./: CMakeLists.txt  README.md  package.xml
include/darc/procedure/: client.hpp  local_dispatcher.hpp  local_dispatcher__fwd.hpp  local_dispatcher_abstract.h  local_dispatcher_base.hpp  procedure_service.hpp  procedure_service__decl.hpp  server.hpp
src/: procedure_service.cpp
test/: darc_procedure_gtest.cpp
