<package>
  <name>darc_procedure</name>
  <version>0.0.1</version>
  <description>DARC Procedure Impl</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iris</build_depend>
  <build_depend>darc_common</build_depend>
  <build_depend>darc_ns</build_depend>
</package>
